--- a/api.yaml
+++ b/api.yaml
@@ -108,6 +108,7 @@
       responses:
         200: 
           success: boolean
+          id: string
         403: # bad token
           message: string
 
